--- a/styles/nav.css
+++ b/styles/nav.css
@@ -17,6 +17,7 @@
 
 nav {
   position: fixed;
+  display: block;
   width: 100%;
   top: 0;
   left: 0;
@@ -65,8 +66,10 @@ img {
 }
 
 .a2 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    color: var(--bg_white);
 }
+
 
 #nav_top_stuff a {
     display: flex;
@@ -89,13 +92,11 @@ img {
     background-color: gray;
 }
 
-#a2 {
-    padding: 0.6rem;
-}
 
 #hamburger-icon, #nav_mobile_butter_free_btn, #btr_image_mobile_nav {
     display: none;
 }
+
 
 
 .nav_item:hover {
@@ -106,7 +107,26 @@ img {
     cursor: pointer;
 }
 
-@media screen and (max-width: 32rem) { 
+#nav_mobile_butter_free_btn, #nav_butter_free_btn {
+    color: black;
+}
+
+
+.nav_main {
+    background-color: var(--bg_white);
+}
+
+
+#nav_main, #nav_top_stuff {
+    color: var(--bg_white);
+}
+
+#nav_item {
+    color: var(--bg_white);
+}
+
+
+@media screen and (max-width: 34.5rem) { 
 
     #nav_mobile_right_content {
         display: flex;
