--- a/styles/section_lovable.css
+++ b/styles/section_lovable.css
@@ -1,7 +1,31 @@
+#section_lovable_video {
+    display: none;
+}
 
+
+#parent_wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#section_lovable {
+        width: 100%;
+        height: auto;
+        display: block;
+        text-align: center;
+        margin-top: 40%;    
+}
+
+@media (prefers-color-scheme: dark) {
+    #section_lovable {
+        margin-top: 7%;    
+    }
+}
 
 @media screen and (max-width: 48rem) { 
    
+
 .wrapper {
   position: relative;
   width: 17rem;     /* controls total width */
@@ -32,22 +56,6 @@
   outline: none;
 }
 
-
-#parent_wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-    #section_lovable {
-        width: 100%;
-        height: auto;
-        display: block;
-        text-align: center;
-        margin-top: 7%;    
-    }
-
-
     #section_lovable_header {
         font-size: 2.3rem;
         max-width: 17ch;
@@ -71,6 +79,8 @@
         margin: 0 auto;
     }
 
+    @media (prefers-color-scheme: dark) {
+
     #section_lovable_video {
         display: flex;
         align-items: center;
@@ -81,6 +91,7 @@
         width: 24rem;
         height: 24rem;
         margin: 0 auto;
+    }
     }
 
 
